--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "iview": "^2.0.0-rc.12",
     "style-loader": "^0.13.0",
     "vue": "^2.2.6",
+    "vue-baidu-map": "^0.10.5",
     "vue-hot-reload-api": "^2.1.0",
     "vue-html-loader": "^1.0.0",
+    "vue-resource": "^1.3.1",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
